--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- SITE TITLE
     ================================================== -->
-    <title>Fabricación de carrocerías para camioneta y camión - Carrocerías HERSA</title>
+    <title>Fabricación de carrocerías para camioneta y camión - Carrocerías HERSA Toluca</title>
 
     <!-- FAVICON
     ================================================== -->
@@ -33,83 +33,54 @@
 <body>
 <!-- NAVBAR
 ================================================== -->
-<nav class="navbar navbar-expand-lg navbar-dark z-depth-5">
+<nav class="navbar navbar-expand-lg navbar-dark z-depth-5 fixed-top">
 
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">
-        <img src="img/hersa-logo.png" height="40" class="d-inline-block align-top mr-2" alt="">
-
+    <a class="navbar-brand" href="index.html">
+        <img src="img/hersa-logo.png" height="40" class="d-inline-block align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-none d-md-inline-block alignt-top mr-1" height="45">
     </a>
 
-    <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Collapsible content -->
     <div class="collapse navbar-collapse" id="basicExampleNav">
-
-        <!-- Links -->
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio
+                <a class="nav-link" href="index.html">Inicio
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="#">Cajas secas</a>
-                    <a class="dropdown-item" href="#">Alargamientos</a>
-                    <a class="dropdown-item" href="#">Carrocerías</a>
-                    <a class="dropdown-item" href="#">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="#">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
                 </div>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="#">Cajas secas</a>
+            <li class="nav-item">
+                <a class="nav-link" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Alargamientos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Carrocerías</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Cajas Refrigeradas</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Adaptaciones</a>
-            </li> -->
-            <li class="nav-item">
-                <a class="nav-link" href="#">Galería</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
         </ul>
-        <!-- Links -->
 
-        <!-- <form class="form-inline">
-            <div class="md-form my-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-        </form> -->
+        <p class="pt-3 pt-lg-0 font-weight-bold">Carrocerías HERSA Toluca</p>
     </div>
-    <!-- Collapsible content -->
 </nav>
 
 
 <main>
 <!-- CAROUSEL
 ================================================== -->
-<section id="carousel" class="z-depth-1">
+<section id="carousel" class="z-depth-1 mt-5 pt-3 mt-md-4 pt-md-0">
     <!--Carousel Wrapper-->
 <div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
-    <div id="nobillo" class="px-2 py-2 z-depth-2">
-        <img src="img/nobillo.png" alt="nobillo" class="img-fluid">
-    </div>
 
     <!--Indicators-->
     <ol class="carousel-indicators">
@@ -161,7 +132,7 @@
         <div class="row justify-content-center align-items-center">
             <div class="col-12 col-md-6">
                 <h1 class="mb-3">¿A qué nos dedicamos?</h1>
-                <p>Venta e instalación de cajas y carrocerías, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
+                <p>Venta e instalación de cajas y carrocerías en Toluca, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
                 <p>Fabricación de carrocerías para camioneta y camión. Cajas secas e inyectadas, de lujo, madera y laminada en general.</p>
                 <p>Trabajos especiales, alargamientos de chasis y aplicación de pintura.</p>
             </div>
@@ -190,8 +161,7 @@
                     <img src="img/home/card-secas.jpg" alt="carrocerias-hersa-cajas-secas" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-title"><a>Cajas secas, de copete y cuadradas</a></h4>
-                        <!-- <p class="card-text">Experiencia de más de 20 años y respaldo de nuestros clientes nos permite poner a su alcance cajas secas duraderas y de mejor calidad.</p> -->
-                        <a href="#" class="btn btn-hersa">Ver más</a>
+                        <a href="cajas-secas.html" class="btn btn-hersa">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -202,8 +172,7 @@
                     <img src="img/home/card-alarga.jpg" alt="carrocerias-hersa-alargamientos-acorazados" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-title"><a>Alargamientos y acorazados</a></h4>
-                        <!-- <p class="card-text">Experiencia de más de 20 años y respaldo de nuestros clientes nos permite poner a su alcance cajas secas duraderas y de mejor calidad.</p> -->
-                        <a href="#" class="btn btn-hersa">Ver más</a>
+                        <a href="alargamientos.html" class="btn btn-hersa">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -214,8 +183,7 @@
                     <img src="img/home/card-carroceria.jpg" alt="carrocerias-hersa" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-title"><a>Carrocerias</a></h4>
-                        <!-- <p class="card-text">Experiencia de más de 20 años y respaldo de nuestros clientes nos permite poner a su alcance cajas secas duraderas y de mejor calidad.</p> -->
-                        <a href="#" class="btn btn-hersa">Ver más</a>
+                        <a href="carrocerias.html" class="btn btn-hersa">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -226,8 +194,7 @@
                     <img src="img/home/card-refri.jpg" alt="carrocerias-hersa-refrigeración" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-title"><a>Cajas de refrigeración</a></h4>
-                        <!-- <p class="card-text">Experiencia de más de 20 años y respaldo de nuestros clientes nos permite poner a su alcance cajas secas duraderas y de mejor calidad.</p> -->
-                        <a href="#" class="btn btn-hersa">Ver más</a>
+                        <a href="cajas-refrigeradas.html" class="btn btn-hersa">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -238,8 +205,7 @@
                     <img src="img/home/card-especial.jpg" alt="carrocerias-hersa-adaptaciones" class="card-img-top">
                     <div class="card-body">
                         <h4 class="card-title"><a>Trabajos especiales y adaptaciones</a></h4>
-                        <!-- <p class="card-text">Experiencia de más de 20 años y respaldo de nuestros clientes nos permite poner a su alcance cajas secas duraderas y de mejor calidad.</p> -->
-                        <a href="#" class="btn btn-hersa">Ver más</a>
+                        <a href="adaptaciones.html" class="btn btn-hersa">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -262,98 +228,110 @@
 </main>
 
 
+
+<!-- <form action="https://www.enformed.io/qy9nmk7x" method="POST" >
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Message</label>
+    <input type="text" name="message" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-check">
+    <input type="checkbox" name="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form> -->
+
+
 <!-- FOOTER
 ================================================== -->
 <footer class="page-footer font-small pt-4">
-    <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
-        <!-- Grid row -->
         <div class="row justify-content-around">
-            <!-- Grid column -->
             <div class="col-md-4 mt-md-0 mt-3">
-                <!-- Content -->
                 <h5 class="text-uppercase">Carrocerías HERSA</h5>
                 <p>Venta e instalación de cajas y carrocerías, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
-                <a href="#">
+                <a href="https://www.facebook.com/carroceriashersadetoluca" target="_blank" rel="external">
                     <button type="button" class="btn btn-outline-white waves-effect btn-sm">
                         <i class="fab fa-facebook-f mr-2"></i>Síguenos en Facebook
                     </button>
                 </a>
             </div>
-            <!-- Grid column -->
+
             <hr class="clearfix w-100 d-md-none pb-3">
-            <!-- Grid column -->
+
             <div class="col-md-2 mb-md-0 mb-3">
-                <!-- Links -->
                 <h5 class="text-uppercase">General</h5>
                 <ul class="list-unstyled">
                     <li class="mb-1">
-                        <a href="#!">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li class="mb-1">
-                        <a href="#!">Galería</a>
+                        <a href="galeria.html">Galería</a>
                     </li>
                     <li>
-                        <a href="#!">Contacto</a>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
+
             <div class="col-md-2 mb-md-0 mb-3">
-                <!-- Links -->
                 <h5 class="text-uppercase">Productos</h5>
                 <ul class="list-unstyled">
                     <li class="mb-1">
-                        <a href="#!">Cajas secas</a>
+                        <a href="cajas-secas.html">Cajas secas</a>
                     </li>
                     <li class="mb-1">
-                        <a href="#!">Alargamientos</a>
+                        <a href="alargamientos.html">Alargamientos</a>
                     </li>
                     <li class="mb-1">
-                        <a href="#!">Carrocerías</a>
+                        <a href="carrocerias.html">Carrocerías</a>
                     </li>
                     <li class="mb-1">
-                        <a href="#!">Cajas refrigeradas</a>
+                        <a href="cajas-refrigeradas.html">Cajas refrigeradas</a>
                     </li>
                     <li class="mb-1">
-                        <a href="#!">Adaptaciones</a>
+                        <a href="adaptaciones.html">Adaptaciones</a>
                     </li>
                 </ul>
             </div>
+
             <div class="col-md-3 mb-md-0 mb-3">
-                <!-- Links -->
                 <h5 class="text-uppercase">Contacto</h5>
                 <ul class="fa-ul ml-4">
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-home"></i></span>
-                        <a href="#">Carretera Toluca-Tenango Km. 8.5 <br>
+                        <a href="https://goo.gl/maps/kBJwVD8xfL62" target="_blank" rel="external">Carretera Toluca-Tenango Km. 8.5 <br>
                         San Miguel Toto, Metepec, Méx.</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
-                        <a href="#">contacto@carroceriashersa.mx</a>
+                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
                     </li>
                     <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
-                        <a href="#">2-32-58-28</a> &nbsp; <a href="#">2-32-59-84</a> <br>
-                        <a href="#">2-32-60-69</a>
+                        <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
+                        <a href="tel:2326069">2-32-60-69</a>
                     </li>
                 </ul>
             </div>
-            <!-- Grid column -->
         </div>
-        <!-- Grid row -->
     </div>
-    <!-- Footer Links -->
-    <!-- Copyright -->
+
     <div class="footer-copyright py-3">
         <div class="row justify-content-between">
-            <div class="col-12 col-md-6">
-                <p class="ml-3">© 2018 Copyright:<a href="#"> Carrocerías HERSA</a></p>
+            <div class="col-12 col-md-6 col-lg-4 order-1 order-lg-1">
+                <p class="ml-3">© 2018 Copyright:<a href="https://carroceriashersa.mx"> Carrocerías HERSA</a></p>
             </div>
-            <div class="col-12 col-md-6 text-right">
-                <p class="mr-3"><a href="#" class="mr-3">Aviso de Privacidad</a>
-                <a href="#">Mapa del Sitio</a></p>
+            <div class="col-12 col-md-6 col-lg-4 order-3 order-lg-2">
+                <p class="text-center">Desarrollado por <a href="https://iconica.mx" target="_blank" rel="author"><strong>Iconica Studio</strong></a></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 order-2 order-lg-3 text-right">
+                <p class="mr-3"><a href="aviso-privacidad.html" class="mr-3">Aviso de Privacidad</a>
+                <a href="mapa-sitio.html">Mapa del Sitio</a></p>
             </div>
         </div>
     </div>
-    <!-- Copyright -->
 </footer>
 
 
