--- a/cajas-secas.html
+++ b/cajas-secas.html
@@ -35,9 +35,9 @@
 ================================================== -->
 <nav class="navbar navbar-expand-lg navbar-dark z-depth-5 fixed-top">
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
         <img src="img/hersa-logo.png" height="40" class="d-inline-block align-top mr-2" alt="carrocerias-hersa">
-        <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-inline-block alignt-top mr-1" height="45">
+        <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-none d-md-inline-block alignt-top mr-1" height="45">
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -48,27 +48,29 @@
     <div class="collapse navbar-collapse" id="basicExampleNav">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio
+                <a class="nav-link" href="index.html">Inicio
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
-                    <a class="dropdown-item" href="#">Cajas secas</a>
-                    <a class="dropdown-item" href="#">Alargamientos</a>
-                    <a class="dropdown-item" href="#">Carrocerías</a>
-                    <a class="dropdown-item" href="#">Cajas refrigeradas</a>
-                    <a class="dropdown-item" href="#">Adaptaciones</a>
+                    <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
+                    <a class="dropdown-item" href="alargamientos.html">Alargamientos</a>
+                    <a class="dropdown-item" href="carrocerias.html">Carrocerías</a>
+                    <a class="dropdown-item" href="cajas-refrigeradas.html">Cajas refrigeradas</a>
+                    <a class="dropdown-item" href="adaptaciones.html">Adaptaciones</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Galería</a>
+                <a class="nav-link" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
             </li>
         </ul>
+
+        <p class="pt-3 pt-lg-0 font-weight-bold">Carrocerías HERSA Toluca</p>
     </div>
 </nav>
 
@@ -80,7 +82,7 @@
     <div class="mask flex-center rgba-black-light">
         <div>
             <h1 class="mt-0 mb-3 pt-4 pt-md-0 text-center text-uppercase">Cajas secas, de copete y cuadradas</h1>
-            <h1 class="text-center"><i class="fas fa-chevron-down fa-lg"></i></h1>
+            <h1 class="text-center"><i class="fas fa-chevron-down fa-lg arrow-animation"></i></h1>
         </div>
     </div>
 </section>
@@ -107,17 +109,26 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-1.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
-                    <img src="img/secas/seca-1.jpg" alt="cajas-secas-copete-cuadradas" class="img-fluid">
+                    <div class="view zoom z-depth-1">
+                        <img src="img/secas/thumbs/seca-1.jpg" class="img-fluid z-depth-1" alt="">
+                        <div class="mask flex-center"></div>
+                    </div>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-2.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
-                    <img src="img/secas/seca-2.jpg" alt="cajas-secas-copete-cuadradas" class="img-fluid">
+                    <div class="view zoom z-depth-1">
+                        <img src="img/secas/thumbs/seca-2.jpg" class="img-fluid" alt="">
+                        <div class="mask flex-center"></div>
+                    </div>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-3.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
-                    <img src="img/secas/seca-3.jpg" alt="cajas-secas-copete-cuadradas" class="img-fluid">
+                    <div class="view zoom z-depth-1">
+                        <img src="img/secas/thumbs/seca-3.jpg" class="img-fluid z-depth-1" alt="">
+                        <div class="mask flex-center"></div>
+                    </div>
                 </a>
             </div>
         </div>
@@ -143,6 +154,97 @@
 </main>
 
 
+<!-- FOOTER
+================================================== -->
+<footer class="page-footer font-small pt-4">
+    <div class="container-fluid text-center text-md-left">
+        <div class="row justify-content-around">
+            <div class="col-md-4 mt-md-0 mt-3">
+                <h5 class="text-uppercase">Carrocerías HERSA</h5>
+                <p>Venta e instalación de cajas y carrocerías, trabajos especiales de acuerdo a las necesidades del cliente, como también alargados y acorazados de chasis.</p>
+                <a href="https://www.facebook.com/carroceriashersadetoluca" target="_blank" rel="external">
+                    <button type="button" class="btn btn-outline-white waves-effect btn-sm">
+                        <i class="fab fa-facebook-f mr-2"></i>Síguenos en Facebook
+                    </button>
+                </a>
+            </div>
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+
+            <div class="col-md-2 mb-md-0 mb-3">
+                <h5 class="text-uppercase">General</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-1">
+                        <a href="index.html">Inicio</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="galeria.html">Galería</a>
+                    </li>
+                    <li>
+                        <a href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-2 mb-md-0 mb-3">
+                <h5 class="text-uppercase">Productos</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-1">
+                        <a href="cajas-secas.html">Cajas secas</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="alargamientos.html">Alargamientos</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="carrocerias.html">Carrocerías</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="cajas-refrigeradas.html">Cajas refrigeradas</a>
+                    </li>
+                    <li class="mb-1">
+                        <a href="adaptaciones.html">Adaptaciones</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-3 mb-md-0 mb-3">
+                <h5 class="text-uppercase">Contacto</h5>
+                <ul class="fa-ul ml-4">
+                    <li class="mb-1"><span class="fa-li"><i class="fa fa-home"></i></span>
+                        <a href="https://goo.gl/maps/kBJwVD8xfL62" target="_blank" rel="external">Carretera Toluca-Tenango Km. 8.5 <br>
+                        San Miguel Toto, Metepec, Méx.</a>
+                    </li>
+                    <li class="mb-1"><span class="fa-li"><i class="fa fa-envelope"></i></span>
+                        <a href="mailto:contacto@carroceriashersa.mx">contacto@carroceriashersa.mx</a>
+                    </li>
+                    <li class="mb-1"><span class="fa-li"><i class="fa fa-phone"></i></span>
+                        <a href="tel:2325828">2-32-58-28</a> &nbsp; <a href="tel:2325984">2-32-59-84</a> <br>
+                        <a href="tel:2326069">2-32-60-69</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-copyright py-3">
+        <div class="row justify-content-between">
+            <div class="col-12 col-md-6 col-lg-4 order-1 order-lg-1">
+                <p class="ml-3">© 2018 Copyright:<a href="https://carroceriashersa.mx"> Carrocerías HERSA</a></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 order-3 order-lg-2">
+                <p class="text-center">Desarrollado por <a href="https://iconica.mx" target="_blank" rel="author"><strong>Iconica Studio</strong></a></p>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 order-2 order-lg-3 text-right">
+                <p class="mr-3"><a href="aviso-privacidad.html" class="mr-3">Aviso de Privacidad</a>
+                <a href="mapa-sitio.html">Mapa del Sitio</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+<!-- SCRIPTS
+================================================== -->
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
