--- a/index.html
+++ b/index.html
@@ -214,6 +214,61 @@
 </section>
 
 
+<!-- PROCESS
+================================================== -->
+<section id="process">
+    <div class="container my-5">
+        <div class="row justify-content-center mb-4">
+            <div class="col-12 col-md-10">
+                <h2 class="text-center">Nuestro proceso</h2>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/home/process-1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>1. Primer paso</h5>
+                                <!-- <p>...</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/home/process-2.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>2. Segundo paso</h5>
+                                <!-- <p>...</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/home/process-3.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>3. Tercer paso</h5>
+                                <!-- <p>...</p> -->
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <!-- SLOGAN
 ================================================== -->
 <section id="slogan" class="z-depth-1">
@@ -335,6 +390,8 @@
 </footer>
 
 
+<!-- SCRIPTS
+================================================== -->
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
