--- a/cajas-secas.html
+++ b/cajas-secas.html
@@ -13,7 +13,7 @@
 
     <!-- SITE TITLE
     ================================================== -->
-    <title>Cajas secas, de copete y cuadradas - Carrocerías HERSA</title>
+    <title>Cajas secas, de copete y cuadradas - Carrocerías HERSA Toluca</title>
 
     <!-- FAVICON
     ================================================== -->
@@ -36,7 +36,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark z-depth-5 fixed-top">
 
     <a class="navbar-brand" href="index.html">
-        <img src="img/hersa-logo.png" height="40" class="d-inline-block align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/hersa-logo.png" height="30" class="d-inline-block d-md-none align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/hersa-logo.png" height="40" class="d-none d-md-inline-block align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-md-none alignt-top mr-1" height="35">
         <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-none d-md-inline-block alignt-top mr-1" height="45">
     </a>
 
@@ -110,7 +112,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-1.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
                     <div class="view zoom z-depth-1">
-                        <img src="img/secas/thumbs/seca-1.jpg" class="img-fluid z-depth-1" alt="">
+                        <img src="img/secas/thumbs/seca-1.jpg" class="img-fluid z-depth-1" alt="Cajas secas, de copete y cuadradas">
                         <div class="mask flex-center"></div>
                     </div>
                 </a>
@@ -118,7 +120,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-2.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
                     <div class="view zoom z-depth-1">
-                        <img src="img/secas/thumbs/seca-2.jpg" class="img-fluid" alt="">
+                        <img src="img/secas/thumbs/seca-2.jpg" class="img-fluid" alt="Cajas secas, de copete y cuadradas">
                         <div class="mask flex-center"></div>
                     </div>
                 </a>
@@ -126,7 +128,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <a href="img/secas/seca-3.jpg" data-lightbox="roadtrip" data-title="Cajas secas, de copete y cuadradas">
                     <div class="view zoom z-depth-1">
-                        <img src="img/secas/thumbs/seca-3.jpg" class="img-fluid z-depth-1" alt="">
+                        <img src="img/secas/thumbs/seca-3.jpg" class="img-fluid z-depth-1" alt="Cajas secas, de copete y cuadradas">
                         <div class="mask flex-center"></div>
                     </div>
                 </a>
@@ -250,6 +252,7 @@
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="node_modules/mdbootstrap/js/mdb.min.js"></script>
 <script src="node_modules/wowjs/dist/wow.min.js"></script>
+<script src="node_modules/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script src="node_modules/lightbox2/dist/js/lightbox.min.js"></script>
 </body>
 </html>
