--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark z-depth-5 fixed-top">
 
     <a class="navbar-brand" href="index.html">
-        <img src="img/hersa-logo.png" height="40" class="d-inline-block align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/hersa-logo.png" height="30" class="d-inline-block d-md-none align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/hersa-logo.png" height="40" class="d-none d-md-inline-block align-top mr-2" alt="carrocerias-hersa">
+        <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-md-none alignt-top mr-1" height="35">
         <img src="img/nobillo.png" alt="carrocerias-hersa" class="d-none d-md-inline-block alignt-top mr-1" height="45">
     </a>
 
@@ -397,5 +399,6 @@
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="node_modules/mdbootstrap/js/mdb.min.js"></script>
 <script src="node_modules/wowjs/dist/wow.min.js"></script>
+<script src="node_modules/imagesloaded/imagesloaded.pkgd.min.js"></script>
 </body>
 </html>
