--- a/alargamientos.html
+++ b/alargamientos.html
@@ -49,12 +49,10 @@
 
     <div class="collapse navbar-collapse" id="basicExampleNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio
-                    <span class="sr-only">(current)</span>
-                </a>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" id="navbar-productos" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Productos</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbar-productos">
                     <a class="dropdown-item" href="cajas-secas.html">Cajas secas</a>
@@ -137,7 +135,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4 text-center">
-                <a href="">
+                <a href="contacto.html">
                     <button type="button" class="btn btn-hersa btn-block waves-effect btn-lg">
                         <h4><i class="fas fa-thumbs-up mr-3"></i>Cotizar</h4>
                     </button>
