--- a/galeria.html
+++ b/galeria.html
@@ -85,126 +85,35 @@
                 <h1 class="text-center">Galería de imágenes</h1>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-1.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
+        <div class="grid">
+            <div class="grid-item">
+                <a href="img/gallery/gallery-1.jpg" data-lightbox="roadtrip" data-title="Carrocerías HERSA">
                     <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-1.jpg" class="img-fluid z-depth-1" alt="Galería HERSA">
+                        <img src="img/gallery/thumbs/gallery-67.jpg" class="img-fluid z-depth-1" alt="Carrocerías HERSA">
                         <div class="mask flex-center"></div>
                     </div>
                 </a>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-2.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-2.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-2.jpg" alt="gallery-2" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-3.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-3.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-3.jpg" alt="gallery-3" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-4.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-4.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-4.jpg" alt="gallery-4" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-5.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-5.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-5.jpg" alt="gallery-4" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-6.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-6.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-6.jpg" alt="gallery-4" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-7.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-7.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-7.jpg" alt="gallery-4" class="img-fluid">
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-8.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-8.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-9.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-9.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-10.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-10.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-11.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-11.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-12.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-12.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-13.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-13.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-14.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-14.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <a href="img/gallery/gallery-15.jpg" data-lightbox="roadtrip" data-title="Galería HERSA">
-                    <div class="view zoom z-depth-1 mb-4">
-                        <img src="img/gallery/thumbs/gallery-15.jpg" class="img-fluid" alt="Galería HERSA">
-                        <div class="mask flex-center"></div>
-                    </div>
-                </a>
+            <div class="grid-item">
+                <img src="img/gallery/gallery-8.jpg" alt="gallery-4" class="img-fluid">
             </div>
         </div>
     </div>
